Fix alignment of social links

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -60,7 +60,8 @@
     li {
       list-style: none;
       display: inline-block;
-      margin-left: 1em;
+      margin-left: 0.5em;
+      margin-right: 0.5em;
       a.social-link-item {
         color: $secondary;
         &:hover,
